# ChangeLog for net-p2p/bitcoin-qt
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/ChangeLog,v 1.100 2015/03/04 00:04:51 blueness Exp $

*bitcoin-qt-0.10.0-r1 (04 Mar 2015)

  04 Mar 2015; Anthony G. Basile <blueness@gentoo.org>
  +bitcoin-qt-0.10.0-r1.ebuild, -bitcoin-qt-0.10.0.ebuild,
  bitcoin-qt-9999.ebuild:
  Dependency on leveldb and libsecp256k1 is now handled by the eclass.

  01 Mar 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  bitcoin-qt-0.10.0.ebuild:
  Comrel: Default-disable more add-on patches

  27 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org>
  bitcoin-qt-0.10.0.ebuild:
  ComRel: Disable add-on patches

  24 Feb 2015; Patrick Lauer <patrick@gentoo.org> bitcoin-qt-0.10.0.ebuild,
  bitcoin-qt-9999.ebuild:
  Add missing libsecp256k1 dep

  24 Feb 2015; Patrick Lauer <patrick@gentoo.org> bitcoin-qt-0.10.0.ebuild:
  Disable censoring by default

*bitcoin-qt-0.9.4 (23 Feb 2015)
*bitcoin-qt-0.10.0 (23 Feb 2015)

  23 Feb 2015; Anthony G. Basile <blueness@gentoo.org>
  +bitcoin-qt-0.10.0.ebuild, +bitcoin-qt-0.9.4.ebuild, bitcoin-qt-9999.ebuild,
  metadata.xml:
  Version bumps using bitcoincore.eclass

  28 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  bitcoin-qt-0.8.6-r1.ebuild, bitcoin-qt-0.9.3-r1.ebuild,
  bitcoin-qt-9999.ebuild:
  Move to EAPI 5 for kde4 eclass changes

  17 Jan 2015; Anthony G. Basile <blueness@gentoo.org> -bitcoin-qt-0.8.5.ebuild:
  Remove older broken stable, bug #536228

  13 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  bitcoin-qt-0.8.6-r1.ebuild:
  Stable on amd64, arm and x86, bug #536228

*bitcoin-qt-0.8.6-r1 (10 Jan 2015)
*bitcoin-qt-0.9.3-r1 (10 Jan 2015)

  10 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  +bitcoin-qt-0.8.6-r1.ebuild, +bitcoin-qt-0.9.3-r1.ebuild,
  +files/0.8-openssl-101k.patch, +files/0.9-openssl-101k.patch,
  -bitcoin-qt-0.8.6.ebuild, -bitcoin-qt-0.9.2.1.ebuild,
  -bitcoin-qt-0.9.3.ebuild: