@@ -11,4 +11,4 @@ REQUIRED_USE=^^ ( qt4 qt5 ) bitcoin_policy_rbf? ( !xt )
 SLOT=0
 SRC_URI=https://github.com/bitcoin/bitcoin/archive/047a89831760ff124740fe9f58411d57ee087078.tar.gz -> bitcoin-v0.10.0.tgz http://luke.dashjr.org/programs/bitcoin/files/bitcoind/luke-jr/0.10.x/0.10.0.ljr20150220/bitcoin-0.10.0.ljr20150220.patches.txz -> bitcoin-0.10.0.ljr20150220.patches.tar.xz xt? ( https://github.com/bitcoinxt/bitcoinxt/compare/047a89831760ff124740fe9f58411d57ee087078...d4084b62c42c38bfe302d712b98909ab26ecce2f.diff -> bitcoinxt-v0.10.0.patch ) bitcoin_policy_rbf? ( https://github.com/petertodd/bitcoin/compare/e43f25c5b1c7b38d28cd0fba09098a9d56d9ac6b...eb22364e5a7cd2595d98c890e3668e97c0905a06.diff -> bitcoin-rbf-v0.10.0.patch )
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	base	87f7447ccfc06fd0729ff4684e11e0d6	bitcoincore	dc75324a8d11c56e59b6f19ab585bbef	db-use	82d0e62839f20e1e0d5a2259abd5316f	eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	kde4-functions	0fefdf727b8cb916a1b974021316f911	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	ea709b525d28e3087eddedb2f884dbbe	qt4-r2	7199e3db5b5908325487d379c6f67cf0	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=d221ad13d3f09f2a9fa054739634290b
+_md5_=e309ca16c13c5da6bdc034d58939dc1c
