@@ -16,27 +16,27 @@ DIST bitcoin-v0.8.6.tgz 3194026 SHA256 26fd485823ee15a823ca51a5ac7ed8664079ef153
 DIST bitcoin-v0.9.3.tgz 4788997 SHA256 3ed92e8323cb4187cae015457c7c5920a5c658438f01c6c45f0ce3aabf9bd428 SHA512 cf6ff5bc586b0614b4e74e1c18b30e8f443f03db348382492e49c70ec31a0ef3a4d1989b34a8fdce289788c894b48b72b94d2562e497220453b668dc28ce0d66 WHIRLPOOL 6ce18de9a2b24cedd88e110088d0747452f8403b6239df9212b673e4a893e059bdea2640b13b6fde659a866d4a6a3b4fa62dde3adbf957b80104d41c0e4aeb18
 DIST bitcoin-v0.9.4.tgz 4885466 SHA256 e7d17bd33a51a755b2d23f3bd9f384a272d87a234d02789056b2e4b8a8a92ca1 SHA512 6f13b3adf8791458e8eb7c1e62cbb2277f2caeb36c21cf0d783db15473cb0f29047bc3939c529ce893437aaf3eac0e7af2b161bd82381434a16474611136de06 WHIRLPOOL a65841ef1bf44066ed7548f81c5efaf59bb1adb99a698bd2e9910e09c395518218d8443180fcd0f63c7c938e9852c36a27b5f021b128e8c4973ec427fe0995ed
 DIST bitcoinxt-v0.10.0.patch 72007 SHA256 f2694f976803dfd8cba11cddd6ee2bdd441737d9b82c9d7550f0f362603223b5 SHA512 6b993859b07d28ed8eac79711c0580d29267c1158838772970fe22e88d68f42f46758494e4430b9470ad529e05b24a936052bbb6747c04b54aa8a95694442747 WHIRLPOOL bbf0904cb06f547976edca2f36f49b1352d4c3e99798b19d45f5c34a74167c8db86017c9fdbaca90f3b7de38ece5f3c527e67e97ccbffdd99abd840f6cd335e4
-EBUILD bitcoin-qt-0.10.0-r1.ebuild 2890 SHA256 3d15c1fd939cfba2a9e2588b8eeccb53917d291b3ba457d03bf0df22c1097839 SHA512 318e5d101e26d4dea5df5ab69bd12bdfec8f4e56fa078b16bd233e217247831e5bb637a6e4d20f11052f74baaa783a6b4c907b0f8013c5bde56da3f4318f563f WHIRLPOOL cb94f9087af944dc370e091c4b147e87981747e4bc1df8173a221aeacbe7cacbe458492ad33ab5ae073cb7ee2d6842d07ab500ae7b4846a08c6442cc50060cd1
+EBUILD bitcoin-qt-0.10.0-r1.ebuild 3092 SHA256 780dee4649d6bded9bd197be36b9b1dbea321edc614c422923278988dde00820 SHA512 aef147d8e343ab8c8cf6ea92e987f9d1ad23629c60b7beb58c6a5ae9cba47fe06c8140f6550532c27bddcab8704de5b5410e42d22acc2f27db228c30520dc16d WHIRLPOOL 2a339a7bee23acb77da586560cbf8663c792e76cec65e6f4cb6e989a4b46e21331c12291b9ee581ef84de2839a2d359dc9eb218f22d768382c772b0c15503574
 EBUILD bitcoin-qt-0.8.6-r1.ebuild 3493 SHA256 4643ae29b4964fa112b59d26248a0d654b96dbce2fbac35e67209f5caf8968af SHA512 8d7eb8ce1dde933c7d33a96d3176a361dff659ac94bc933f8e37348442fa20aa96002700a595777db0e438a887e226c2d2316211368022ad27f0d037f780e021 WHIRLPOOL d6e18fc3b8e06f7454a8d9e299153e998b6b88c16281fdf057ce513dbf23c49f57c4d5d44abc543e110ddc2caf3d9915ca3b9c4b7f8bfddec0a9591215473410
 EBUILD bitcoin-qt-0.9.3-r1.ebuild 3614 SHA256 224b1c75c7b8c83c446a97b3ffef001bceefc7d60d6ff62ae71ef4e90004c000 SHA512 68dc467711679f30dfea2e95fa4a504f59b1877fe28bdbb929fbd281fa83814deb62541a3a83197b05c2089ca90ac1b5026c4c7f7fdff8bc37bb8345c4f76506 WHIRLPOOL efde5bc68dbc7906d4ed94b61fb0558cfa715e4b95f4e00ea668116fcdeab3e9a83e9298a0866470a447e3069cf022a6f1d8d78c84371460509ebc5040909fc3
 EBUILD bitcoin-qt-0.9.4.ebuild 3566 SHA256 f46d191b74f895eb6bbdd4eeb61a2e27f6861e51b14e265946c53d27a9ac03f3 SHA512 acf56f270856168739b216d84535f29b478dbfe7070d98f9c9f8728ea94217c1612061f948becf05e1f68b31c8a781ed5a638290b4e9bf7e0ff40edfd1178323 WHIRLPOOL 9c3288bcadb532aa22a34f981f1a992040db207432fc39e42e8988f9f1c90b7a46f67c0d72becdaece2cbd9cd3ad7dd6f814f6a60816c91fce44b810b88a54d7
 EBUILD bitcoin-qt-9999.ebuild 2497 SHA256 a76b38f8a5daddd562da259b24a3752561aff940fe5a3c9ff2ccd22189b20b81 SHA512 0936a89e0a876fb2b515f5a7385390f27e1129d81eff13ee2a3e7d9dbfcc4f92d2069d8c1aca150ebc6b0ae34073d12eb8cf25a3111eabd428ba045d8ccfaf41 WHIRLPOOL 3422dd98aa1b123b5f423db26694b6c744069f9018a71a1b9ee68d2e83c21946689256c799d8180380fc5a9c7b29930c6bdd89e1151f0f8b7e0dfde1828b3610
-MISC ChangeLog 20442 SHA256 e165f50fee43fda9237ec83c9a18ec11b0ee9716d200502874925bc413a0424b SHA512 3c268cb5e0f52bba8e72b8433b2fd2e5cd7b17d120db0cd8fff3d22647de11e544776263387de5ad2976007176c2bc1241133b06d0d2c1278e65396cd93d87bd WHIRLPOOL 85b983531ae24f96ccf86364e6bf0eb3b37800e4efeddbcb7940b1a1460dbd6a62066d9e8bc735511c598b52797474927c1dbc4b4f3bdb9bf18bc2942124d7a9
+MISC ChangeLog 20556 SHA256 656e947bd0413b459228e13aa6655c509789963d53527884b53341ad0a535cdc SHA512 ddc43793f9414dc69559fe243f4309fe93aefa2ccdf772dc39c02b60bf3034f45a481c69db9096e5e74cd3b34feff3e629bcab842db3f3b4bebbf556bd50ddf4 WHIRLPOOL fd859c80de60b2ff8ef11767242b505aa33348502cd79f572277111c74303319d02b540fb460307670ea96a75755e4ef348843f6d7f4971ebf895e276e886e76
 MISC metadata.xml 1556 SHA256 f5b8c1e0e2cfbefc6b70785434a95d5509a1335935cb5e675537eab0f54be6da SHA512 c6ae1e639e1c4f82cafa6193615c8b641d5926dc9cad712e3fc98dc20eba68e8700b6d4a587c00275a422cf31516f74e5c1bfbbdef41960b7784e2b46a22edf7 WHIRLPOOL a30463812581ebb11fc17d531c5de5d29f5e8a9997606e06a6965227ea0d4be1e38c3a7ad6bb3adfa83cf49f87605639307e6c2cac60b001d034d953cc7aa98e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU9kymAAoJEJOE+m71LUu60pMP/1WdcXOA4g0vJpnHP9a+UPu2
-9vNz4NGcfQ5cogK2tChhqgZmI25gE4Ihx2r/ubfFLqtS7VXc3zkXrQii/WJ6RBH0
-/R7MDvOkc1DdaB8rX9Jw68eRm7hW6ej/KFZc1EjEatzBzU+WGcPbAeRNkgF/L5lU
-8zX2EDLHqTaTZfaUpxEBNDItae5YAAjrPPd2mwJh8KaeAhrAiDz4EVoQoWlolni0
-ctCjCoJWDLNR0bPLJMrK1vM3L5au3HwKOsTKDABgz6oh0R5s8LfIXNipW8zfUSko
-mX/SwZ69T4yQWpd9XJ5zJrm4NZz9u/QUPm1EUpymAtQhLQowLE15NBSU5EOUHXF/
-1I+acNXtALnSngSaCIokeRmtvtHEzBkDMmn82BYlX4xcUtqTWXI6xKB0kdzU//3Y
-K4cQfd0Ml3vUZfu4bO9k22iGmZDUw+knev0XEPzla6qSzWylUoHS2pP9cs6i/HwN
-BwWsxQGfTbv9oOUssoz4uZCZYW3m4R2Pg8ykJ8TMkNNnZTrUNMxrWuuN4J6G2JeG
-noRSrPhulLxqz4sfYAk8FUK+EoX7XxckOGIHOOa/m8okMfFuqr+XNl5pIXUmaJms
-n1dSnJIZ8pJQxTmDp2iM3YOqqQxgapDJiuBpiW+Ot4M5aU3McO1Jyv5yQeJqxiMM
-phOG5Bnd2uO7fv2hqqBo
-=6SYa
+iQIcBAEBCAAGBQJU/7L0AAoJEPGu1DbS6WIAFwEP/19EpVxPET9dwqLbFb0t7/wm
+7yHoB4B1Bz9d7d/+D4frOwaSw0FFyHAjL/KzNg3cBGasCJpYhaX5g1WMaJw1WvnR
+N2H0/3faeG/BU6Sn7vLj9mTxGwnkmhoLkAuXQdzCUwriw0DG0geFNC8ec692kkm/
+rpwgBvkwVYROayPOPIkbdI6wh2IB6+ee3INaejCr84lExsxnu39q4+wiC71XpTE7
+OtO/zRMnXWSDmAJth7x6ho+yOVCmKAD4ozw1CuFZtoLg2KV1nagtvaLhIPSXjfAP
+GWcUmJfkPSVc/oXjHq2HvnebfbpuRHWUbOCu3ljAzy56htI4L+yVVRH3hvdIO0cO
+hNvyFUlLWSRwanIMOqDSbB51E1HTM9CVI+OEdd9Duu9o2Ek5n6y5HHDye+EczOvU
+BiocyjuVtJ/pPNCxYHcUnx+CpHvUmugeMagreKeBAwieVGLpZjsjhOV+SSFC5oDR
+kj+bM6ZcxDiqNEWB7FKNvYUXpz/KrvuqRrxKyKuWAlMhRu8B1z+S1oYEUwn1UR2r
+/KO4NLSVcKnzzxGYcbC/dkWjFRf/fkhhy3Q8jNnMXTMLl5S/bfSBIWlM9+KT5adc
+cHuO49MUtcqyWfU8Duvs42R9olFFEcGSQAQauqIlNy9RnwEfnCARJmi2hssUCNf/
+neVMFp+qt3ovcSK2Upo/
+=PEE/
 -----END PGP SIGNATURE-----
