@@ -1,6 +1,6 @@
 # Copyright 2010-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/bitcoin-qt-0.10.0-r1.ebuild,v 1.1 2015/03/04 00:04:51 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/bitcoin-qt-0.10.0-r1.ebuild,v 1.2 2015/03/11 03:13:54 vapier Exp $
 
 EAPI=5
 
@@ -60,6 +60,13 @@ src_prepare() {
 	sed "/${filt}/d" -i 'src/qt/bitcoin_locale.qrc'
 	sed "s/locale\/${filt}/bitcoin.qrc/" -i 'src/Makefile.qt.include'
 	einfo "Languages -- Enabled:$yeslang -- Disabled:$nolang"
+
+	if has_version '>=dev-libs/leveldb-1.18-r1'; then
+		# Newer leveldb has changed header location.
+		sed -i \
+			-e '/#include/s:memenv.h:leveldb/helpers/memenv.h:' \
+			src/leveldbwrapper.cpp || die
+	fi
 
 	bitcoincore_autoreconf
 }
