@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9852 2015/03/10 18:40:31 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9853 2015/03/11 03:15:09 vapier Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  10 Mar 2015; Mike Frysinger <vapier@gentoo.org> package.mask:
+  Drop protobuf/protobuf-c masks now that packages seem to work with it.
 
   10 Mar 2015; Markos Chandras <hwoarang@gentoo.org> package.mask:
   Mask broken rb_libtorrent ebuild due to #539368 and #542434
