@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/bitcoin-qt
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/ChangeLog,v 1.100 2015/03/04 00:04:51 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/bitcoin-qt/ChangeLog,v 1.101 2015/03/11 03:13:54 vapier Exp $
+
+  11 Mar 2015; Mike Frysinger <vapier@gentoo.org> bitcoin-qt-0.10.0-r1.ebuild:
+  Build with new memenv.h location.
 
 *bitcoin-qt-0.10.0-r1 (04 Mar 2015)
 
